# Monitoring

./: .gitignore  DASHBOARD_DESIGN.md  Dockerfile.api  Dockerfile.streamlit  Interface.py  MONITORING_GUIDE.md  README.md  VEILLE_OBSERVABILITE.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml
api/app/: main.py  metrics.py  models.py  predictor.py  routes.py
monitoring/grafana/dashboards/: business-metrics.json  http-overview.json  simple-business.json  simple-http.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/locust/: Dockerfile  locustfile.py
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: alert.rules.yml
notebooks/: etl_cleaning.ipynb  modelling.ipynb
tests/: test_api.py
